# trestle

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
examples/: README.md
src/trestle/: __init__.py  core.py
src/trestle/api/: __init__.py  cli.py  nih_reporter.py
tests/: README.md  test_cli.py  test_nih_reporter_live.py  test_nih_reporter_unit.py  test_smoke.py
